fix crash from report [#25746] Adding keyframes to nested custom properties (IDProperties) of a bone causes segfault though keyframing still doesn't work, it gives an error instead. also use const char * in more parts of the py/rna api.